--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/hbd2.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -27,33 +27,32 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Eka</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Entah ya, kamu pake pelet merk apa. Manjur pake banget :)</p>
         </div>
 
         <div class="three">
             <p>It's your birthday!! :D</p>
+            <label style="font-size: 14px;">yah.... nambah tua deh wkwk</label>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    "Selamat ulang tahun sayang. Terima kasih sudah jadi bagian terbaik dalam hidupku. Semoga hari ini dan seterusnya membawa kebahagiaan yang sama besar seperti yang kamu berikan padaku, dan semoga semua impianmu serta keinginan kamu tercapai satu persatu, dan aku senang bisa jadi bagian dari perjalanan hidup kamu. Aku bersyukur bisa merayakan momen ini denganmu. Love you, always.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">Baru kali ini aku menemukan wanita,</p>
+            <p class="idea-2">Dia baik, penyayang, tapi dia juga pemarah. </p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
-                .
+                Aku suka apapun tentangnya.<br>
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Oleh karena itu,</p>
             <p class="idea-5">
                 You are Special
                 <span>:)</span>
@@ -65,11 +64,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/eka.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">Semoga kita bisa sama-sama terus yaa 💖</h5>
             </div>
         </div>
 
@@ -142,7 +141,7 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
+            <p>Okay, semoga kamu suka yaa hehe</p>
             <p id="replay">Or click, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
         </div>
